--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
   </head>
   <body>
     <main>
-      <form id="searchForm">
-        <input type="text" id="searchInput" placeholder=" Busca..." />
-        <button type="submit">Buscar</button>
-      </form>
+      <div>
+        <form id="searchForm">
+          <input type="text" id="searchInput" placeholder=" Busca..." />
+          <button type="submit">Buscar</button>
+        </form>
+        <thead>
+          <th>Producto</th>
+          <th>Producto</th>
+          <th>Producto</th>
+          <th>Producto</th>
+        </thead>
+      </div>
     </main>
   </body>
 </html>
